--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,22 +5,33 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: fastapiSS
+    container_name: fastapiUSER
     ports:
       - "3100:3100"
     volumes:
-      - /project/aivolution-fastapi/secrets.json:/fastapiSS/app/secrets.json
+      - shared_data:/shared
+      - /project/aivolution-fastapi/secrets.json:/shared/secrets.json
     depends_on:
       - db
+    environment:
+      - SECRETS_JSON_PATH=/shared/secrets.json
+
   db:
     image: mysql:8.0
+    container_name: fastapiUSER-db
+    ports:
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sh:/docker-entrypoint-initdb.d/init.sh
+      - shared_data:/shared
+      - /project/aivolution-fastapi/secrets.json:/shared/secrets.json
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DBNAME}
       - MYSQL_USER=${MYSQL_USERNAME}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+
 volumes:
   mysql_data:
-  secrets:
+  shared_data:
